# pdetclassifier

./: README.md  pdetclassifier.py  pyproject.toml
pdetclassifier/: __init__.py  pdetclassifier.py
